header structure added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,44 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <h1 class="logo"><a href="#FIXME" title="Gymster"><img src="https://placehold.jp/339x110.png" alt="Gymster"></a></h1>
+      <div class="header-content">
+        <div class="header-top">
+          <div class="wrapper">
+            <ul class="header-contact">
+              <li><a href="mailto:info@example.com" title="info@example.com">info@example.com</a></li>
+              <li><a href="tel:+0123456789" title="+012 345 6789">+012 345 6789</a></li>
+            </ul>
+            <ul class="social-items">
+              <li><a href="#FIXME" title="Facebook" class="facebook" target="_blank" rel="noopener noreferrer">facebook</a></li>
+              <li><a href="#FIXME" title="Twitter" class="twitter" target="_blank" rel="noopener noreferrer">twitter</a></li>
+              <li><a href="#FIXME" title="Linkedin" class="linkedin" target="_blank" rel="noopener noreferrer">linkedin</a></li>
+              <li><a href="#FIXME" title="Instagram" class="instagram" target="_blank" rel="noopener noreferrer">instagram</a></li>
+              <li><a href="#FIXME" title="Youtube" class="youtube" target="_blank" rel="noopener noreferrer">youtube</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="header-bottom">
+          <div class="wrapper">
+            <div class="hamburger">
+              <span class="bar">bar</span>
+            </div>
+            <nav>
+              <ul class="nav-items">
+                <li class="active-nav"><a href="#FIXME" title="Home">home</a></li>
+                <li><a href="#FIXME" title="About">about</a></li>
+                <li><a href="#FIXME" title="classes">classes</a></li>
+                <li><a href="#FIXME" title="trainers">trainers</a></li>
+                <li><a href="#FIXME" title="Pages" class="down-arrow">pages</a></li>
+                <li><a href="#FIXME" title="Contact">contact</a></li>
+              </ul>
+              <div class="header-btn">
+                <a href="#FIXME" title="Join Us">join us</a>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
