banner structure added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,19 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!-- banner section start -->
+      <section class="banner">
+        <div class="wrapper">
+          <div class="banner-content">
+            <h2>trainers</h2>
+            <ul class="banner-btns">
+              <li><a href="#FIXME" class="orange-btn" title="Home">home</a></li>
+              <li><a href="#FIXME" class="white-btn" title="Trainers">trainers</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- banner section end -->
     </main>
     <!--main section end-->
     <!--footer section start-->
