trainers structure added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,72 @@
         </div>
       </section>
       <!-- banner section end -->
+      <!-- trainers section start -->
+      <section class="trainers">
+        <div class="wrapper">
+          <div class="section-heading">
+            <span>the team</span>
+            <h3>expert trainers</h3>
+            <ul class="trainer-items">
+              <li>
+                <figure>
+                  <img src="assets/images/team-1.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>john deo</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/team-2.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>james taylor</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/team-3.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>adam phillips</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/team-2.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>john deo</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/team-3.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>james taylor</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/team-1.jpg" alt="Trainer">
+                  <figcaption>
+                    <h4>adam phillips</h4>
+                    <span>trainer</span>
+                  </figcaption>
+                </figure>
+              </li>              
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- trainers section end -->
     </main>
     <!--main section end-->
     <!--footer section start-->
