footer structure added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="header-top">
           <div class="wrapper">
             <ul class="header-contact">
-              <li><a href="mailto:info@example.com" title="info@example.com">info@example.com</a></li>
-              <li><a href="tel:+0123456789" title="+012 345 6789">+012 345 6789</a></li>
+              <li><a href="mailto:info@example.com" class="header-mail" title="info@example.com">info@example.com</a></li>
+              <li><a href="tel:+0123456789" class="call-icon" title="+012 345 6789">+012 345 6789</a></li>
             </ul>
             <ul class="social-items">
               <li><a href="#FIXME" title="Facebook" class="facebook" target="_blank" rel="noopener noreferrer">facebook</a></li>
@@ -44,8 +44,8 @@
               <ul class="nav-items">
                 <li class="active-nav"><a href="#FIXME" title="Home">home</a></li>
                 <li><a href="#FIXME" title="About">about</a></li>
-                <li><a href="#FIXME" title="classes">classes</a></li>
-                <li><a href="#FIXME" title="trainers">trainers</a></li>
+                <li><a href="#FIXME" title="Classes">classes</a></li>
+                <li><a href="#FIXME" title="Trainers">trainers</a></li>
                 <li><a href="#FIXME" title="Pages" class="down-arrow">pages</a></li>
                 <li><a href="#FIXME" title="Contact">contact</a></li>
               </ul>
@@ -143,7 +143,75 @@
     <!--main section end-->
     <!--footer section start-->
     <footer>      
-
+      <div class="footer-top">
+        <div class="wrapper">
+          <ul class="top-items">
+            <li class="top-list">
+              <h5>get in touch</h5>
+              <ul class="contact-items">
+                <li>
+                  <p>123 Street, New York, USA</p>
+                </li>
+                <li>
+                  <a href="mailto:info@example.com" class="header-mail" title="info@example.com">info@example.com</a>
+                </li>
+                <li><a href="tel:+0123456789" class="call-icon" title="+012 345 6789">+012 345 6789</a>
+                </li>
+              </ul>
+              <ul class="footer-social">
+                <li><a href="#FIXME" title="Twitter" class="twitter" target="_blank" rel="noopener noreferrer">twitter</a></li>
+                <li><a href="#FIXME" title="Facebook" class="facebook" target="_blank" rel="noopener noreferrer">facebook</a></li>
+                <li><a href="#FIXME" title="Linkedin" class="linkedin" target="_blank" rel="noopener noreferrer">linkedin</a></li>
+                <li><a href="#FIXME" title="Instagram" class="instagram" target="_blank" rel="noopener noreferrer">instagram</a></li>        
+              </ul>              
+            </li>
+            <li class="top-list">
+              <h5>quick links</h5>
+              <ul class="quick-items">
+                <li class="active-nav"><a href="#FIXME" title="Home">home</a></li>
+                <li><a href="#FIXME" title="About Us">about us</a></li>
+                <li><a href="#FIXME" title="Class Schedule">class schedule</a></li>
+                <li><a href="#FIXME" title="Our trainers">our trainers</a></li>
+                <li><a href="#FIXME" title="Latest Blog">latest blog</a></li>
+                <li><a href="#FIXME" title="Contact Us">contact us</a></li>
+              </ul>              
+            </li>
+            <li class="top-list">
+              <h5>popular links</h5>
+              <ul class="popular-items">
+                <li class="active-nav"><a href="#FIXME" title="Home">home</a></li>
+                <li><a href="#FIXME" title="About Us">about us</a></li>
+                <li><a href="#FIXME" title="Class Schedule">class schedule</a></li>
+                <li><a href="#FIXME" title="Our trainers">our trainers</a></li>
+                <li><a href="#FIXME" title="Latest Blog">latest blog</a></li>
+                <li><a href="#FIXME" title="Contact Us">contact us</a></li>
+              </ul>              
+            </li>
+          </ul>
+          <div class="newsletter">
+            <h6>newsletter</h6>
+            <span>subscribe our newsletter</span>
+            <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+            <form action="#FIXME" method="post">
+              <div class="input-group">
+                <input type="email" placeholder="Your Email">
+              </div>
+              <div class="input-group">
+                <input type="submit" value="sign up">
+              </div>
+            </form>
+            <span class="company-name">Designed by Axioned</span>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="wrapper">
+          <p>&copy; <span>your site name.</span>all rights reserved</p>
+          <div class="scroll-top-btn">
+            <span>top</span>
+          </div>
+        </div>
+      </div>
     </footer>
     <!--footer section end-->
 
