nav active class changed

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </div>
             <nav>
               <ul class="nav-items">
-                <li class="active-nav"><a href="#FIXME" title="Home">home</a></li>
+                <li><a href="#FIXME" title="Home">home</a></li>
                 <li><a href="#FIXME" title="About">about</a></li>
                 <li><a href="#FIXME" title="Classes">classes</a></li>
-                <li><a href="#FIXME" title="Trainers">trainers</a></li>
+                <li class="active-nav"><a href="#FIXME" title="Trainers">trainers</a></li>
                 <li><a href="#FIXME" title="Pages" class="down-arrow">pages</a></li>
                 <li><a href="#FIXME" title="Contact">contact</a></li>
               </ul>
