footer structure updated

--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
           </ul>
           <div class="newsletter">
             <h6>newsletter</h6>
-            <span>subscribe our newsletter</span>
+            <span class="subscribe-para">subscribe our newsletter</span>
             <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
             <form action="#FIXME" method="post">
               <div class="input-group">
                 <input type="email" placeholder="Your Email">
               </div>
-              <div class="input-group">
+              <div class="input-control">
                 <input type="submit" value="sign up">
               </div>
             </form>
